--- a/style.css
+++ b/style.css
@@ -341,4 +341,44 @@ body {
 .email-password input::placeholder {
     color: black;
 }
+/* Your existing CSS styles */
+
+.page-box {
+    border: 1px solid #19715a;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.main-heading {
+    text-align: center;
+    color: black;
+}
+
+.signup-page {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-section {
+    width: 50%;
+}
+
+.benefits-heading {
+    font-size: 24px;
+    color: black;
+}
+
+.benefits-list {
+    color: black;
+    list-style-type: square;
+    padding-left: 20px;
+}
+
+.right-section {
+    width: 50%;
+    padding-left: 20px;
+}
+
+/* Other existing CSS styles */
 
